# agblogger

./: .dockerignore  .env.example  .gitignore  .importlinter  .semgrep.yml  .setup.sh  AGENTS.md  Caddyfile  Caddyfile.production  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  trivy.yaml
backend/: __init__.py  config.py  database.py  exceptions.py  main.py
backend/api/: admin.py  auth.py  content.py  crosspost.py  deps.py  health.py  labels.py  pages.py  posts.py  render.py  sync.py
backend/crosspost/: atproto_oauth.py  base.py  bluesky.py  bluesky_oauth_state.py  facebook.py  mastodon.py  registry.py  ssrf.py  x.py
backend/filesystem/: __init__.py  content_manager.py  frontmatter.py  toml_manager.py
backend/middleware/: seo.py
backend/migrations/: env.py
backend/models/: __init__.py  base.py  crosspost.py  label.py  post.py  sync.py  user.py
backend/pandoc/: __init__.py  renderer.py  server.py
backend/schemas/: admin.py  auth.py  crosspost.py  label.py  page.py  post.py
backend/services/: admin_service.py  auth_service.py  cache_service.py  crosspost_service.py  crypto_service.py  dag.py  datetime_service.py  git_service.py  label_service.py  page_service.py  post_service.py  rate_limit_service.py  slug_service.py  sync_service.py
cli/: deploy_production.py  mutation_backend.py  sync_client.py
content/: about.md  index.toml  labels.toml
content/posts/: 2026-02-02-hello-world.md  2026-02-10-getting-started.md
docs/: ARCHITECTURE.md  history.md  initial_prompt.md  review_2.md
docs/arch/: auth.md  backend.md  cross-posting.md  data-flow.md  deployment.md  frontend.md  index.md  overview.md  security.md  sync.md  testing.md
docs/guidelines/: security.md
docs/pandoc/: 01-synopsis.md  02-description.md  03-options.md  04-exit-codes.md  05-defaults-files.md  06-templates.md  07-extensions.md  08-pandocs-markdown.md  09-citations.md  10-slide-shows.md  11-epubs.md  12-chunked-html.md  13-jupyter-notebooks.md  14-vimdoc.md  15-syntax-highlighting.md  16-custom-styles.md  17-custom-readers-and-writers.md  18-reproducible-builds.md  19-accessible-pdfs.md  20-running-pandoc-as-a-web-server.md  21-running-pandoc-as-a-lua-interpreter.md  22-a-note-on-security.md  23-authors.md
docs/plans/: 2026-02-18-multi-parent-labels-design.md  2026-02-18-multi-parent-labels-plan.md  2026-02-18-structured-frontmatter-editor-design.md  2026-02-18-sync-frontmatter-normalization-design.md  2026-02-18-sync-frontmatter-normalization-plan.md  2026-02-19-labels-navigation-design.md  2026-02-19-labels-navigation-plan.md  2026-02-19-three-way-merge-plan.md  2026-02-20-admin-panel-design.md  2026-02-20-admin-panel-plan.md  2026-02-20-editor-autosave-design.md  2026-02-20-editor-autosave-plan.md  2026-02-20-post-assets-design.md  2026-02-20-post-assets-plan.md  2026-02-20-post-title-frontmatter-design.md  2026-02-20-post-title-frontmatter-plan.md  2026-02-20-post-toc-design.md  2026-02-20-post-toc-plan.md  2026-02-20-post-upload-design.md  2026-02-20-post-upload-plan.md  2026-02-21-bluesky-oauth-design.md  2026-02-21-bluesky-oauth-plan.md  2026-02-21-cross-posting-ui-design.md  2026-02-21-cross-posting-ui-plan.md  2026-02-21-post-sharing-design.md  2026-02-21-post-sharing-plan.md  2026-02-21-x-facebook-crosspost-design.md  2026-02-21-x-facebook-crosspost-plan.md  2026-02-22-crash-resilience-design.md  2026-02-22-crash-resilience-plan.md  2026-02-22-sync-simplification-design.md  2026-02-22-sync-simplification-plan.md  2026-02-23-pandoc-server-design.md  2026-02-23-pandoc-server-plan.md  2026-02-24-self-host-fonts.md  2026-02-25-youtube-embed-design.md  2026-02-25-youtube-embed-plan.md
docs/prompts/: crash_hunting.md  docs_review.md  e2e_test.md  exceptions_review.md  initial_prompt.md  property_based_testing.md  test_coverage.md  test_review.md  typing.md
docs/reviews/: 2026-02-17-codebase-review.md  2026-02-18-coderabbit-full-codebase.md  2026-02-18-multi-parent-labels.md  2026-02-18-structured-frontmatter-editor.md  2026-02-19-coderabbit-review.md  2026-02-19-comprehensive-review.md  2026-02-19-e2e-testing.md  2026-02-19-error-handling-review.md  2026-02-19-three-way-merge.md  2026-02-20-coderabbit-21-commits.md  2026-02-20-coderabbit-review.md  2026-02-20-security-best-practices-report.md  2026-02-21-coderabbit-bluesky-oauth.md  2026-02-21-coderabbit-cross-posting-ui.md  2026-02-21-e2e-testing.md  2026-02-21-security-best-practices-report.md  2026-02-21-security-threat-model.md  2026-02-21-x-facebook-crosspost-review.md  2026-02-22-crash-resilience-review.md  2026-02-22-post-sharing-review.md  2026-02-22-security-review.md  2026-02-22-sync-simplification-review.md  2026-02-23-coderabbit-review.md  2026-02-24-coderabbit-review.md  2026-02-24-comprehensive-pr-review.md  2026-02-24-reliability-audit.md  2026-02-25-youtube-embed-review.md  2026-02-26-input-validation-pr-review.md  2026-02-26-input-validation-review.md
docs/tools/: static-analysis.md
frontend/: .dependency-cruiser.cjs  eslint.config.js  index.html  knip.json  package-lock.json  package.json  stryker.mutation-full.config.mjs  stryker.mutation.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
stubs/grapheme/: __init__.pyi
tests/: conftest.py
tests/test_api/: test_api_integration.py  test_api_security.py  test_auth_hardening.py  test_bluesky_oauth_endpoints.py  test_content_api.py  test_crosspost_api.py  test_draft_visibility.py  test_error_handling.py  test_input_validation.py  test_path_safety_hypothesis.py  test_post_assets_upload.py  test_post_directory.py  test_post_rename.py  test_post_upload.py  test_security_regressions.py
tests/test_cli/: test_deploy_production.py  test_mutation_backend.py  test_safe_path.py  test_sync_client.py
tests/test_labels/: test_label_dag.py  test_label_dag_hypothesis.py  test_label_service.py
tests/test_rendering/: test_fallback_renderer.py  test_frontmatter.py  test_pandoc_server.py  test_renderer_no_dead_code.py  test_sanitizer.py  (+1 more)
(+126 files in other folders)
