[project]
name = "agblogger"
version = "0.1.0"
description = "A markdown-first blogging platform with bidirectional sync, label DAG, and cross-posting"
requires-python = ">=3.13"
# Developed on Python 3.14; 3.13 is the minimum supported version
license = "MIT"
authors = [{ name = "Lukasz" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "alembic>=1.15",

    # Markdown rendering
    "pypandoc>=1.14",

    # YAML / front matter
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",

    # TOML writing (reading via stdlib tomllib)
    "tomli-w>=1.1",

    # Auth
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",

    # Validation & settings
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",

    # Date/time
    "pendulum>=3.0",

    # File hashing & diffing
    "merge3>=0.0.15",

    # HTTP client (for cross-posting, sync client)
    "httpx>=0.28",

    # Multipart file uploads
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
crosspost = [
    "tweepy>=4.14",
    "atproto>=0.0.55",
    "Mastodon.py>=1.8",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
    "pre-commit>=4.1",
]

[project.scripts]
agblogger = "backend.main:cli_entry"
agblogger-sync = "cli.sync_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Tool configuration ──────────────────────────────────────────────

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["backend", "cli", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
    "S104",  # allow binding to 0.0.0.0
    "S105",  # allow hardcoded passwords in config/tests
    "S106",  # allow hardcoded passwords in function args
]

[tool.ruff.lint.per-file-ignores]
"cli/**" = ["T201"]                # CLI tools need print statements
"backend/api/**" = ["TC", "B008"]  # FastAPI needs runtime type imports and Depends() defaults
"backend/models/**" = ["RUF012", "TC003"]  # SQLAlchemy needs runtime types for Mapped[]
"backend/pandoc/**" = ["S607"]     # pandoc is invoked by name
"backend/services/git_service.py" = ["S603", "S607"]  # git CLI invoked via subprocess

[tool.ruff.lint.isort]
known-first-party = ["backend", "cli"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pypandoc.*",
    "frontmatter.*",
    "tweepy.*",
    "atproto.*",
    "mastodon.*",
    "merge3.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.coverage.run]
source = ["backend", "cli"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]
