[project]
name = "agblogger"
version = "0.1.0"
description = "A markdown-first blogging platform with bidirectional sync, label DAG, and cross-posting"
requires-python = ">=3.13"
# Developed on Python 3.14; 3.13 is the minimum supported version
license = "MIT"
authors = [{ name = "Lukasz Czajka" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "alembic>=1.15",


    # YAML / front matter
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    # TOML writing (reading via stdlib tomllib)
    "tomli-w>=1.1",
    # Auth
    "pyjwt>=2.10",
    "cryptography>=45.0",
    "bcrypt>=4.0",
    # Validation & settings
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    # Date/time
    "pendulum>=3.0",
    # HTTP client (for cross-posting, sync client)
    "httpx>=0.28",
    "httpcore>=1.0,<2",
    # Multipart file uploads
    "python-multipart>=0.0.20",
    "grapheme>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
    "basedpyright>=1.29",
    "deptry>=0.24",
    "import-linter>=2.4",
    "pip-audit>=2.9",
    "semgrep==1.152.0",
    "vulture==2.14",
    "types-PyYAML>=6.0",
    "pre-commit>=4.1",
    "pyinstaller>=6.0",
    "hypothesis>=6.151.9",
]

[project.scripts]
agblogger = "backend.main:cli_entry"
agblogger-sync = "cli.sync_client:main"
agblogger-deploy = "cli.deploy_production:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Tool configuration ──────────────────────────────────────────────

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["backend", "cli", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff-specific rules
]
[tool.ruff.lint.per-file-ignores]
"cli/**" = ["T201"]                # CLI tools need print statements
"backend/api/**" = ["TC", "B008"]  # FastAPI needs runtime type imports and Depends() defaults
"backend/models/**" = ["RUF012", "TC003"]  # SQLAlchemy needs runtime types for Mapped[]
"backend/pandoc/**" = ["S607"]     # pandoc is invoked by name
"backend/services/git_service.py" = ["S603", "S607"]  # git CLI invoked via subprocess
"tests/**" = ["S101", "S105", "S106"]  # test code intentionally uses asserts and fixed credentials

[tool.ruff.lint.isort]
known-first-party = ["backend", "cli"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_any_unimported = true
disallow_any_decorated = true
warn_unreachable = true
extra_checks = true
enable_error_code = ["possibly-undefined", "truthy-bool", "redundant-expr"]
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs"

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.deptry]
known_first_party = ["backend", "cli", "tests"]
ignore_notebooks = true

[tool.deptry.per_rule_ignores]
DEP002 = [
    "aiosqlite",
    "python-multipart",
    "types-PyYAML",
    "pytest",
    "hypothesis",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "basedpyright",
    "deptry",
    "import-linter",
    "pip-audit",
    "semgrep",
    "vulture",
    "pre-commit",
    "pyinstaller",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
exclude = [
    ".venv",
    "backend/migrations",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[tool.vulture]
paths = ["backend", "cli"]
exclude = ["backend/migrations"]
min_confidence = 80

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
disallow_any_decorated = false
disallow_any_unimported = false
warn_return_any = false
disable_error_code = ["method-assign", "no-any-return", "union-attr"]

[[tool.mypy.overrides]]
module = [
    "pypandoc.*",
    "frontmatter.*",
    "tweepy.*",
    "atproto.*",
    "mastodon.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["backend", "cli"]
omit = ["*/migrations/*", "*/tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]
